# llm-world

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/chat/: im_channel.rs
src/component/: chat.rs  lab.rs  mod.rs
src/debug_tool/: mod.rs
src/llm/: local_llm.rs
src/sys/: llm.rs  mod.rs
static/: project.toml  prompt.2.toml  prompt.map.toml  prompt.toml  prompt.tool.toml  story.toml  template.toml
