[package]
name = "llm-world"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.22"

llama-cpp-2 = { version = "0.1.62", features = ["dynamic_link"] }
encoding_rs = "0.8.34"

crossterm = "0.27.0"
ratatui = { version = "0.27.0", features = ["crossterm"] }
tui-textarea = "0.5.0"
crossbeam = "0.8.4"
anyhow = "1.0.86"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
clap = { version = "4.5.7", features = ["derive"] }
toml = "0.8.14"

chrono = "0.4.38"
handlebars = "6.0.0"
